# potsticker

./: .gitignore  README.md  handshake.py
ai/: .gitignore  README.md  __init__.py  main.py  pyproject.toml
ai/prompts/: flask_gen.md
pots/: .dockerignore  Dockerfile  README.md  access_log.txt  docker-compose.yaml  main.py  new_pot.sh  pyproject.toml  temptation.py
wifi/: deauth_demo.py  detect_deauth.py  detect_wps_bf.py  main.py  pyproject.toml  requirements.txt  reset.py  scap.py  trigger_attacks.py  web_server.py  wifi.py
wifi/static/: script.js  style.css
wifi/templates/: index.html
