[project]
name = "wifi"
version = "0.1.0"
description = "deals with the wifi side of detecting attacks"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "flask>=3.1.2",
    "flask-cors>=6.0.2",
    "google>=3.0.0",
    "google-genai>=1.61.0",
    "pyserial==3.5",
    "scapy>=2.7.0",
    "serial>=0.0.97",
]
